--- a/src/Presentations/Rasot.Web/appsettings.json
+++ b/src/Presentations/Rasot.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnectionString": "server=localhost;port=3306; database=rasotdb; uid=root; password=001453"
+    "DefaultConnectionString": "server=mysql;port=3306; database=rasotdb; uid=root; password=001453"
   },
   "Logging": {
     "LogLevel": {
