--- a/src/Modules/Rasot.Module.Cms/Rasot.Module.Cms.csproj
+++ b/src/Modules/Rasot.Module.Cms/Rasot.Module.Cms.csproj
@@ -24,6 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Areas\Client\Views\Cms\Detail.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="module.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
